<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyDashes,MissingTranslation">
    <string name="app_name">非去不可</string>
    <string name="loading_text">Loading…</string>
    <string name="main_nav_home">首页</string>
    <string name="main_nav_expo">EXPO</string>
    <string name="main_nav_tab_expo">博览会</string>
    <string name="main_nav_ai_travel">AI导游</string>
    <string name="main_nav_group_buy">拼团</string>
    <string name="main_nav_task">任务</string>
    <string name="main_nav_me">我的</string>
    <string name="main_nav_draw">抽奖</string>
    <string name="common_name">非去不可</string>
    <string name="common_no_login_tip">家人陪伴，非去不可</string>
    <string name="common_login">登录/注册</string>
    <string name="common_help_center">帮助中心</string>
    <string name="common_more">更多</string>
    <string name="common_search">搜索</string>
    <string name="common_至尊会员">至尊会员</string>
    <string name="common_王者会员">王者会员</string>
    <string name="common_荣耀会员">荣耀会员</string>
    <string name="common_黄金会员">黄金会员</string>
    <string name="common_超级福袋会员">超级福袋会员</string>
    <string name="common_福袋会员">福袋会员</string>
    <string name="common_点击抽奖">点击\n抽奖</string>
    <string name="common_兑换旅游宝">兑换旅游宝</string>
    <string name="me_how_reg">如何注册</string>
    <string name="me_login_title">登录[非去不可]</string>
    <string name="me_login_account">登录用电子邮件/电话号码*</string>
    <string name="me_login_account_hint">请输入邮箱/手机号</string>
    <string name="me_login_pwd">登录密码*</string>
    <string name="me_login_pwd_hint">请输入您的登录密码</string>
    <string name="me_login_forget">忘记登录密码?</string>
    <string name="me_登录">登录</string>
    <string name="me_login_noaccount">没有帐户？</string>
    <string name="me_reg_title">注册[非去不可]</string>
    <string name="me_reg_phone_title">注册邮箱/手机号*</string>
    <string name="me_reg_phone_hint">请输入邮箱/中国大陆手机号</string>
    <string name="me_reg_code_title">验证码*</string>
    <string name="me_reg_code_hint">请输入短信验证码</string>
    <string name="me_reg_get_code">获取验证码</string>
    <string name="me_reg_pwd1_title">创建新密码*</string>
    <string name="me_reg_pwd_hint">8–20位字符</string>
    <string name="me_reg_pwd2_title">确认密码*</string>
    <string name="me_reg_recommend_code">推荐码(选修的)</string>
    <string name="me_reg_recommend_code_hint">请输入推荐码</string>
    <string name="me_reg_protocol1">注册即表示您同意并接受我们的</string>
    <string name="me_reg_protocol2">用户协议</string>
    <string name="me_reg_protocol3">及</string>
    <string name="me_reg_protocol4">隐私政策</string>
    <string name="me_reg_to_login">已经有帐号？登录</string>
    <string name="me_reg_to_login2">已经有帐号？</string>
    <string name="me_tip_inconsistent">两次密码不一致</string>
    <string name="me_tip_pwd">请输入8–20位字符密码</string>
    <string name="me_帮助中心">帮助中心</string>
    <string name="me_more">更多</string>
    <string name="me_help_item1">如何\n兑换旅游宝</string>
    <string name="me_help_item2">如何充值</string>
    <string name="me_help_item3">如何注册</string>
    <string name="me_wallet_item1">人民币钱包</string>
    <string name="me_旅游宝余额">旅游宝余额</string>
    <string name="me_wallet_item3">奖励金额</string>
    <string name="me_market_title">旅游宝应用</string>
    <string name="me_market_item1">旅游配套</string>
    <string name="me_market_item2">旅游宝余额</string>
    <string name="me_team_title">我的旅团</string>
    <string name="me_team_item1">我的旅团</string>
    <string name="me_team_item2">充值查询</string>
    <string name="me_team_item3">提现查询</string>
    <string name="me_setting_title">设置</string>
    <string name="me_setting_item1">选择语言</string>
    <string name="me_setting_item2">修改密码</string>
    <string name="me_setting_item3">登出</string>
    <string name="me_member_upgrade_title">开通拓展会员</string>
    <string name="me_member_upgrade_type">拓展会员</string>
    <string name="me_member_upgrade_level">20 CNY/永远</string>
    <string name="me_member_upgrade_activation">开通</string>
    <string name="me_member_upgrade_desc"> 1、解锁4200元现金任务\n2、取得每日一次「旅游抽奖」资格。\n3、享有「拓展奖励」及「旅游代理商奖励」领取资格。\n4、享有「网红计划」参与资格。</string>
    <string name="me_qr">扫一扫开启[非去不可]的旅程</string>
    <string name="me_复制地址">复制地址</string>
    <string name="me_推荐链接">推荐链接</string>
    <string name="me_推荐码">推荐码:%s</string>
    <string name="me_编辑个人资料">编辑个人资料</string>
    <string name="me_头像设置">头像设置</string>
    <string name="me_点击头像可更换照片">点击头像可更换照片</string>
    <string name="me_注册电话号码或电子邮件">注册电话号码或电子邮件</string>
    <string name="me_开通拓展会员日">开通拓展会员日</string>
    <string name="me_实名认证">实名认证</string>
    <string name="me_昵称">昵称</string>
    <string name="me_性别">性别</string>
    <string name="me_男">男</string>
    <string name="me_女">女</string>
    <string name="me_生日">生日</string>
    <string name="me_地区">地区</string>
    <string name="me_关于我们">关于我们</string>
    <string name="me_注册">注册</string>
    <string name="me_提现">提现</string>
    <string name="me_充值">充值</string>
    <string name="me_级别">级别</string>
    <string name="me_推荐">推荐</string>
    <string name="me_使用USDT充值">使用USDT充值</string>
    <string name="me_兑换旅游宝">兑换旅游宝</string>
    <string name="me_成为付费会员">成为付费会员</string>
    <string name="me_我的钱包">我的钱包</string>
    <string name="me_交易市场">交易市场</string>
    <string name="me_人民币">人民币(元)</string>
    <string name="me_已认证">已认证</string>
    <string name="me_未认证">未认证</string>
    <string name="me_未开通">未开通</string>
    <string name="me_修改密码">修改密码</string>
    <string name="me_当前密码">当前密码</string>
    <string name="me_新密码">新密码</string>
    <string name="me_确认密码">确认密码</string>
    <string name="me_保存">保存</string>
    <string name="me_账户登录">账户登录</string>
    <string name="me_首次登录">首次登录\n领新人专享券包</string>
    <string name="me_开通拓展会员">开通拓展会员</string>
    <string name="me_立即开通">支付5.00美元立即开通</string>
    <string name="me_确认">确认</string>
    <string name="me_登出">登出</string>
    <string name="me_您确定要登出新">您确定要登出?</string>
    <string name="me_确定">确定</string>
    <string name="me_至尊会员">至尊会员</string>
    <string name="me_王者会员">王者会员</string>
    <string name="me_荣耀会员">荣耀会员</string>
    <string name="me_黄金会员">黄金会员</string>
    <string name="me_超级福袋会员">超级福袋会员</string>
    <string name="me_福袋会员">福袋会员</string>
    <!--    6：至尊会员 5：王者会员 4：荣耀会员 3: 黄金会员 2：超级福袋会员 1：福袋会员-->
    <string name="me_全部">全部</string>
    <string name="me_最少问换1旅游宝">最少问换1旅游宝</string>
    <string name="me_账户余额">账户余额&#160;&#160;&#160;&#160;:</string>
    <string name="me_单价">单价&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;:</string>
    <string name="me_实际到账">实际到账&#160;&#160;&#160;&#160;:</string>
    <string name="me_需支付金额">需支付金额:</string>
    <string name="home_top">置顶</string>
    <string name="home_search">搜索</string>
    <string name="home_help_center">帮助中心</string>
    <string name="home_task">任务</string>
    <string name="home_draw">抽奖</string>
    <string name="home_recharge">充值</string>
    <string name="home_activity">活动</string>
    <string name="home_live">直播</string>
    <string name="home_item1">推一推</string>
    <string name="home_item2">金福袋</string>
    <string name="home_item3">EXPO</string>
    <string name="home_item4">帮助中心</string>
    <string name="home_item5">会员权益</string>
    <string name="home_item6">拼团</string>
    <string name="home_details_btn1">非去不可</string>
    <string name="home_details_btn2">计划前往</string>
    <string name="home_details_btn3">不感兴趣</string>
    <string name="home_info_center">信息中心</string>
    <string name="home_info_center_detail">查看详情</string>
    <string name="home_lang_item1">English</string>
    <string name="home_lang_item2">简体中文</string>
    <string name="home_lang_item3">繁體中文</string>
    <string name="home_lang_item4"> 한국어</string>
    <string name="home_info_center_sysinfo">系统信息</string>
    <string name="home_info_center_notice">公告</string>
    <string name="home_info_center_personal">个人信息</string>
    <string name="home_nologin">非去不可-非同小可</string>
    <string name="home_nologin_btn">登录/注册</string>
    <string name="home_cancel">取消</string>
    <string name="home_ok">确认</string>
    <string name="home_中国">中国</string>
    <string name="home_亚洲">亚洲</string>
    <string name="home_大洋洲">大洋洲</string>
    <string name="home_北美洲">北美洲</string>
    <string name="home_南美洲">南美洲</string>


    <string name="draw_旅游抽奖规则说明">旅游抽奖规则说明</string>
    <string name="draw_tourism_desc">1.激活成为[非去不可]拓展会员。\n2.完成每日[分享任务]以及[品鉴任务]即可获得一次抽奖机会。\n3.所有未使用的抽奖机会将不被累积至次日 </string>
    <string name="draw_旅游抽奖">旅游抽奖</string>
    <string name="draw_福袋抽奖">福袋抽奖</string>
    <string name="draw_兑换旅游宝">兑换旅游宝</string>
    <string name="draw_福袋抽奖规则说明">福袋抽奖规则说明</string>
    <string name="draw_lucky_desc">1.激活成为[非去不可]拓展会员。\n2.完成每日[分享任务]以及[品鉴任务]即可获得一次抽奖机会。\n3.持有至少20的旅游宝\n4.福袋奖励=所持有旅游宝数量*中奖比例\n5.所有未使用的抽奖机会将不被累积至次日 </string>
    <string name="task_title">非赚不可 任务进度</string>
    <string name="task_receive">领取</string>
    <string name="task_如何获得奖励">如何获得奖励?</string>
    <string name="expo_details">详情</string>
    <string name="expo_customer_feedback">客户反馈</string>
    <string name="expo_feedback">反馈</string>
    <string name="expo_hint">输入关键字查询</string>
    <string name="expo_upload_pinglu">上传评论</string>
    <string name="home_第一期推一推活动圆满线束尽快期待下一期">第一期推一推活动圆满线束，尽快期待下一期</string>
    <string name="home_活动结束">活动结束</string>
    <string name="home_旅游抽奖规则说明">旅游抽奖规则说明</string>
    <string name="home_查看历史记录">查看历史记录</string>

    <string name="task_分享任务">分享任务</string>
    <string name="task_分享">分享</string>
    <string name="task_品鉴任务">品鉴任务</string>
    <string name="task_观看视频">观看视频</string>
    <string name="task_1050旅游宝">/1050旅游宝</string>
    <string name="task_想分享这篇文章">想分享这篇文章？</string>
    <string name="task_我想分享给">我想分享给:</string>

    <string name="task_pop_content">1.需完成"分享任务"和"品鉴任务"。\n2.完成210轮任务可领取总值1050美元的奖励。</string>
    <string name="task_pop_content1">每日分享海报至您的社交媒体即可完成任务</string>
    <string name="task_pop_content2">观看视频广告即可完成任务</string>
    <string name="task_查询景点">查询景点</string>


    <!--新增的文案需要适配国际化文案-->
    <string name="login_input_tips">请输入账户或者登录密码</string>
    <string name="forget_activity_title">重置登录密码</string>
    <string name="forget_activity_input_account">请输入账户</string>
    <string name="forget_activity_account">注册账户*</string>
    <string name="forget_activity_new_pwd">设置新登录密码*</string>
    <string name="forget_activity_pwd">登录密码</string>
    <string name="forget_gong_xi">恭喜</string>
    <string name="forget_set_pwd_success_tip">您成功设置了新的密码</string>
    <string name="forget_start_login">开始登录</string>
    <string name="wallet_invest_tip">成功兑换%1$s旅游宝</string>
    <string name="qr_copy_text">已复制</string>
    <string name="qr_long_click_success">长按保存图片成功</string>


    <string name="iphone_8">iPhone 8</string>
    <string name="lucky_bead">周大福转运珠</string>
    <string name="beats_headset">Beats 耳机</string>
    <string name="xiaomi_scales">小米体重秤</string>
    <string name="baofeng_vr_glasses">暴风魔镜VR眼镜</string>
    <string name="iqiyi_month_card">爱奇艺月卡会员</string>
    <string name="iqiyi_month_card_no">爱奇艺月卡激活码</string>

</resources>