<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/me_wallet_bg"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_marginTop="24dp"
            app:layout_collapseMode="pin">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                app:srcCompat="@drawable/common_back" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:text="@string/home_查看历史记录"
                android:textColor="#282828"
                android:textSize="13dp"
                app:drawableRightCompat="@drawable/draw_history" />
        </androidx.appcompat.widget.Toolbar>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/me_我的钱包"
            android:textColor="@color/common_color_282828"
            android:textSize="22dp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/me_旅游宝余额"
            android:textColor="@color/common_color_282828"
            android:textSize="14dp" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atvMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/common_color_282828"
            android:textSize="30dp"
            android:textStyle="bold"
            tools:text="200,000" />


        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/common_color_ffffff"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/me_兑换旅游宝"
                android:textColor="@color/common_color_282828"
                android:textSize="16sp" />


            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp">

                <com.google.android.material.circularreveal.CircularRevealLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/common_input_bg"
                    android:minHeight="40dp">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/aetAccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="20dp"
                        android:background="@color/common_color_00FFFFFF"
                        android:hint="@string/me_最少问换1旅游宝"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/common_color_282828"
                        android:textColorHint="@color/common_color_282828"
                        android:textSize="14sp" />

                </com.google.android.material.circularreveal.CircularRevealLinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnLogin"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/common_btn_login_gradient"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/me_全部"
                    android:textColor="@color/common_color_282828"
                    android:textSize="16sp" />
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_账户余额" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00美元"
                    tools:text="0.00美元" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_单价" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    tools:text="1" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_实际到账" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00旅游宝"
                    tools:text="0.00旅游宝" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/me_需支付金额" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.00美元"
                    tools:text="0.00美元" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/common_btn_login_gradient"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/me_确定"
                android:textColor="@color/common_color_282828"
                android:textSize="16sp" />
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

</layout>