<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.circularreveal.CircularRevealRelativeLayout
        android:id="@+id/noLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/home_nologin_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:text="@string/home_nologin"
            android:textColor="@color/common_color_CFA25B"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/atvNoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/home_nobtn"
            android:gravity="center"
            android:text="@string/home_nologin_btn"
            android:textColor="@color/common_color_202930"
            android:textSize="12dp"
            android:textStyle="bold" />

    </com.google.android.material.circularreveal.CircularRevealRelativeLayout>

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/home_grid_bg"
        android:orientation="vertical">

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/crllItem1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:srcCompat="@drawable/home_item1" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/home_item1"
                    android:textColor="@color/common_color_353535"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>


            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/crllItem2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:srcCompat="@drawable/home_item2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/home_item2"

                    android:textColor="@color/common_color_353535"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>


            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/crllItem3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:srcCompat="@drawable/home_item3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_item3"
                    android:textColor="@color/common_color_353535"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/crllItem6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:srcCompat="@drawable/home_item6" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_item6"
                    android:textColor="@color/common_color_353535"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>
        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        <com.google.android.material.circularreveal.CircularRevealLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="gone">

            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/crllItem4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:srcCompat="@drawable/home_item4" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/home_item4"
                    android:textColor="@color/common_color_353535"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </com.google.android.material.circularreveal.CircularRevealLinearLayout>


            <com.google.android.material.circularreveal.CircularRevealLinearLayout
                android:id="@+id/crllItem5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    app:srcCompat="@drawable/home_item5" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/home_item5"
                    android:textColor="@color/common_color_353535"
                    android:textSize="16dp"
                    android:textStyle="bold" />


            </com.google.android.material.circularreveal.CircularRevealLinearLayout>

        </com.google.android.material.circularreveal.CircularRevealLinearLayout>

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>



