<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.circularreveal.CircularRevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/groupBuyParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/me_wallet_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_collapseMode="pin">

        <TextView
            android:id="@+id/memberHistoryClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:drawablePadding="5dp"
            android:text="@string/home_查看历史记录"
            android:textColor="#282828"
            android:textSize="13sp"
            app:drawableRightCompat="@drawable/draw_history" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/me_交易市场"
        android:textColor="@color/common_color_282828"
        android:textSize="22dp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/me_旅游宝余额"
        android:textColor="@color/common_color_282828"
        android:textSize="14dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/atvMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/common_color_282828"
        android:textSize="30dp"
        android:textStyle="bold"
        tools:text="200,000" />

    <com.handy.fetchbook.basic.widget.ViewSmartLayout
        android:id="@+id/viewSmartLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/groupBuyRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingBottom="20dp"
            tools:listitem="@layout/upgrade_item" />

    </com.handy.fetchbook.basic.widget.ViewSmartLayout>

</com.google.android.material.circularreveal.CircularRevealLinearLayout>
